novice/02.01/3.1.2. Strings
>>> 'spam egss' # single quotes
'spam egss'
>>> 'doesn\'t' # use \ ' to escape the single quote...
"doesn't"
>>> "doesn'\t" # ...or use double quotes instead
"doesn'\t"
>>> '"Yes," they said.'
'"Yes," they said.'
>>> "\"Yes,
  File "<stdin>", line 1
    "\"Yes,
    ^
SyntaxError: unterminated string literal (detected at line 1)
>>> "\"Yes,\" they said."
'"Yes," they said.'
>>> '"Isn\'t," they said.'
'"Isn\'t," they said.'
>>> '"Isn\'t," they said.'
'"Isn\'t," they said.'
>>> print('"Isn\'t," they said.')
"Isn't," they said.
>>> s = 'First line.\nSecond line.' #
>>> s = 'First line.\nSecond line.' # \n means newline
>>> s # without print(), \n produces a new line
'First line.\nSecond line.'
>>> print('C:\some\name') # here \n means newline!
C:\some
ame
>>> print(r'C:\some\name') # note the r before the quote
C:\some\name
>>> print("""\
...
...
... print("""\
... Usage: thingy [OPTIONS]
  File "<stdin>", line 1
    print("""\
          ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>>      -h                        Display this usage message
  File "<stdin>", line 1
    -h                        Display this usage message
IndentationError: unexpected indent
>>>      -H hostname               Hostname to connect to
  File "<stdin>", line 1
    -H hostname               Hostname to connect to
IndentationError: unexpected indent
>>> print("""\
... Usage: thingy [OPTIONS]
...      -h                        Display this usage message
...      -H hostname               Hostname to connect to
... """)
Usage: thingy [OPTIONS]
     -h                        Display this usage message
     -H hostname               Hostname to connect to

>>> Usage: thingy [OPTIONS]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'thingy' is not defined
>>>      -h                        Display this usage message
  File "<stdin>", line 1
    -h                        Display this usage message
IndentationError: unexpected indent
>>>      -H hostname               Hostname to connect to
  File "<stdin>", line 1
    -H hostname               Hostname to connect to
IndentationError: unexpected indent
>>> # 3 Times 'un',followed by 'ium'
>>> 3 * 'un' + 'ium'
'unununium'
>>> 'Py' 'thon'
'Python'
>>> text = ('Put several strings within parentheses'
...         'to have them joined together.')
>>> text
'Put several strings within parenthesesto have them joined together.'
>>> prefix = 'Py'
>>> prefix 'thon' # can't concatenate a variable and a string literal
  File "<stdin>", line 1
    prefix 'thon' # can't concatenate a variable and a string literal
           ^^^^^^
SyntaxError: invalid syntax
>>> ('un' * 3) ''ium'
  File "<stdin>", line 1
    ('un' * 3) ''ium'
               ^^
SyntaxError: invalid syntax
>>> prefix + 'thon'
'Python'
>>> word = 'python'
>>> word[0] # character in position 0
'p'
>>> word[5] # character in position 5
'n'
>>> word[-1] # last character
'n'
>>> word[-2] # second-last character
'o'
>>> word[-6]
'p'
>>> word[0:2] # characters from position 0 (inscluded) to w2 (excluded)
'py'
>>> word[2:5] # characters from position 2 (included) to 5 (excluded)
'tho'
>>> word[:2] # character from the beginning to position 2 (exclueded)
'py'
>>> word[4:] # characters from position 4 (included) to the end
'on'
>>> word[-2:] # characters from the second-last (included) to the end
'on'
>>> >>> word[:2] + word[2:]
  File "<stdin>", line 1
    >>> word[:2] + word[2:]
    ^^
SyntaxError: invalid syntax
>>> 'Python'
'Python'
>>> >>> word[:4] + word[4:]
  File "<stdin>", line 1
    >>> word[:4] + word[4:]
    ^^
SyntaxError: invalid syntax
>>> 'Python'
'Python'
>>> >>> word[:2] + word[2:]
  File "<stdin>", line 1
    >>> word[:2] + word[2:]
    ^^
SyntaxError: invalid syntax
>>> 'Python'
'Python'
>>> word[:2] + word[2:]
'python'
>>> word[4:] + word[4:]
'onon'
>>> word[:4] + word[4:]
'python'
>>> +---+---+---+---+---+---+
  File "<stdin>", line 1
    +---+---+---+---+---+---+
                             ^
SyntaxError: invalid syntax
>>>  | P | y | t | h | o | n |
  File "<stdin>", line 1
    | P | y | t | h | o | n |
IndentationError: unexpected indent
>>>  +---+---+---+---+---+---+
  File "<stdin>", line 1
    +---+---+---+---+---+---+
IndentationError: unexpected indent
>>>  0   1   2   3   4   5   6
  File "<stdin>", line 1
    0   1   2   3   4   5   6
IndentationError: unexpected indent
>>> -6  -5  -4  -3  -2  -1
-21
>>> word[42] # the word only has 6 characters
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: string index out of range
>>> word[4:42]
'on'
>>> word[42:]
''
>>> word[0]
'p'
>>> word[0] = 'j'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object does not support item assignment
>>> word[2:] = 'py'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object does not support item assignment
>>> 'j' + word[1:]
'jython'
>>> word[:2] + 'py'
'pypy'
>>> s = 'supercalifragilisticexpialidocius'
>>> len(s)
33

